add patch permissions endpoint
